# sunwet

./: .gitignore  .gitmodules  build.py  fdap.ts  fdap_example.ts  query.md  readme.md
.github/workflows/: build.yml  check.yml  pages.yml
python/: import_music_zip.py
rust/import/: Cargo.toml
rust/import/src/: data.rs
rust/native/: Cargo.toml
rust/native/src/: htreq.rs  lib.rs  util.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs  model.rs
rust/web/: Cargo.toml
rust/web/.cargo/: config.toml
rust/web/src/: async_.rs  el_general.rs  lib.rs  main.rs  ministate.rs  playlist.rs  query_albums.datalog  (+6 more)
source/: browser.nix  browserModule.nix  build_browser_debug.sh  ci.nix  default_config.ts  docker.nix  fdap.ts  fdap_example.ts  generate.sh  generate_extension_config.ts  local_example.ts  package.nix  standalone.nix  tsconfig.json
source/browser/: Cargo.toml  browser_manifest.json  browser_manifest_chrome.json  browser_manifest_firefox.json  build.sh
source/browser/ext_static/: background.js  content.js  content2.d.ts  options.html  options1.js  options2.d.ts  options_style.css  site_artstation.js  site_booru.js  site_deviantart.js  site_instagram.js  site_twitter.js  site_twitter_early.js  sunwet.css  tsconfig.json
source/browser/src/: capture_button.rs  lib.rs  site_twitter.rs
source/docs/: design.md  query.md
source/native/: Cargo.toml  build.rs
source/native-bindgen/: Cargo.toml
source/native-import/: Cargo.toml
source/native-import/src/: gather.rs  gather_audio.rs  gather_comic.rs  gather_epub.rs  gather_video.rs  lib.rs
source/native/buildlib/: dbv1.rs  dbv2.rs  dbv3.rs  mod.rs
source/native/src/: db.rs  lib.rs  main.rs  query.rs  query_test.rs
source/native/src/client/: change.rs  commit.rs  mod.rs  query.rs  query_parser.rustemo  query_test.rs  req.rs
source/native/src/client/import_/: gather.rs  gather_audio.rs  gather_comic.rs  gather_epub.rs  gather_video.rs  mod.rs
source/native/src/client/media_import/: gather.rs  gather_audio.rs  gather_comic.rs  gather_epub.rs  gather_video.rs  mod.rs
source/native/src/interface/: iam.rs  mod.rs  query.rs  triple.rs
source/native/src/interface/config/: access.rs  identity.rs  mod.rs
source/native/src/server/: access.rs  db.rs  dbutil.rs  dbwrite.rs  defaultview_query_albums.txt  defaultview_query_albums_tracks.txt  defaultview_query_notes.txt  defaultviews.rs  filesutil.rs  fsutil.rs  migrate.rs  mod.rs  query.rs  query_audio_albums_by_add_date.txt  query_audio_albums_by_random.txt  query_audio_albums_search_artist.txt  query_audio_albums_search_name.txt  query_audio_albums_suffix.txt  query_audio_albums_tracks.txt  query_audio_tracks_by_random.txt  query_audio_tracks_search_artist.txt  query_audio_tracks_search_name.txt  query_audio_tracks_suffix.txt  query_notes_by_add_date.txt  query_notes_by_random.txt  query_notes_search.txt  query_notes_search_topic.txt  query_notes_suffix.txt  query_test.rs  setup_fts.sql  state.rs
source/native/src/server/handlers/: handle_files.rs  handle_gc.rs  handle_link.rs  handle_menu.rs  handle_oidc.rs  handle_static.rs  mod.rs
source/native/src/server/subsystems/: background.rs  files.rs  gc.rs  generate_files.rs  link.rs  menu.rs  mod.rs  oidc.rs  static_.rs
source/nixbuild/: shared.nix
source/queries/: query_audio_albums.txt  query_audio_albums_by_add_date.txt  query_audio_albums_by_random.txt  query_audio_albums_eq_album.txt  query_audio_albums_eq_artist.txt  query_audio_albums_eq_artist_by_add_date.txt  query_audio_albums_eq_artist_by_name.txt  query_audio_albums_search_artist.txt  query_audio_albums_search_name.txt  query_audio_albums_tracks.txt  query_audio_tracks.txt  query_audio_tracks_by_random.txt  query_audio_tracks_search_artist.txt  query_audio_tracks_search_name.txt  query_book_albums.txt  query_book_albums_by_artist.txt  query_book_albums_by_name.txt  query_book_albums_eq_album.txt  query_book_albums_eq_artist.txt  query_book_albums_eq_artist_by_name.txt  query_book_albums_search_artist.txt  query_book_albums_search_name.txt  query_book_albums_suffix.txt  query_comic_albums.txt  query_comic_albums_by_artist.txt  query_comic_albums_by_name.txt  query_comic_albums_eq_album.txt  query_comic_albums_eq_artist.txt  query_comic_albums_eq_artist_by_name.txt  query_comic_albums_search_artist.txt  query_comic_albums_search_name.txt  query_comic_albums_suffix.txt  query_comic_albums_tracks.txt  query_image.txt  query_image_exists.txt  query_image_select.txt  query_microblog.txt  query_microblog_exists.txt  query_microblog_select.txt  query_notes.txt  (+17 more)
source/shared/: Cargo.toml  build.rs
source/shared-wasm/: Cargo.toml
source/shared/src/: form.rs  lib.rs  query_analysis.rs  query_parser.rs  query_parser.rustemo  query_parser_test.rs  stringpattern.rs
source/shared/src/interface/: iam.rs  mod.rs  query.rs  triple.rs
source/shared/src/interface/cli/: mod.rs
source/shared/src/interface/config/: form.rs  menu.rs  mod.rs  view.rs
source/shared/src/interface/derived/: mod.rs
source/shared/src/interface/ont/: mod.rs
source/shared/src/interface/wire/: link.rs  mod.rs
source/wasm/: Cargo.toml  build.rs
source/wasm/.cargo/: config.toml
source/wasm/src/: async_.rs  auth.rs  constants.rs  el_general.rs  js.rs  js_media.rs  lib.rs  main_link.rs  main_nonlink.rs  media.rs  ministate.rs  ont.rs  page_edit.rs  page_form.rs  page_view.rs  playlist.rs  state.rs  websocket.rs  world.rs
source/wasm/src/page_edit/: mod.rs
source/wasm/src/page_form/: mod.rs
source/wasm/src/page_list/: mod.rs
source/wasm/src/page_query/: elements.rs  mod.rs
source/wasm/src/page_view/: elements.rs  mod.rs
source/wasm/static/: index.html  index_link.html  index_test.html  link.html  manifest.json  notes.md  plugin.d.ts  plugin_import.d.ts  plugin_view_list.d.ts  plugin_view_list.js  serviceworker.js  style.css  style.d.ts  style.js  style_base.css  style_export.d.ts  style_export2.d.ts  style_functional.css  style_reset.css  style_s_form.css  style_s_list.css  style_s_menu.css  style_s_titlebar.css  style_shared.d.ts  style_test.js  tsconfig.json
(+18 files in other folders)
