[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
zbase32 = "0.1"
hex = "0.4"
futures = "0.3"
shared = { path = "../shared" }
cozo = { version = "0.7", default-features = false, features = [
    "graph-algo",
    "storage-sqlite",
] }
loga = "0.4"
taskmanager = { version = "0.5.1", path = "/home/andrew/temp/ren/taskmanager" }
hyper = { version = "1", features = ["server", "client", "http1"] }
http-body-util = "0.1"
http-body = "1"
aargvark = { version = "0.1", features = ["serde_json", "serde_yaml"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
include_directory = "0.1.1"
rust-embed = { version = "8.2.0", features = [
    "mime-guess",
    "interpolate-folder-path",
] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
hickory-resolver = "0.24.0"
hyper-rustls = "0.26.0"
rustls = "0.22.2"
tower-service = "0.3.2"
mime_guess = "2.0.4"
async-stream = "0.3.5"
console_error_panic_hook = "0.1.7"
