[package]
name = "sunwet-browser"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
debug = true

[dependencies]
shared = { path = "../shared" }
shared-wasm = { path = "../shared-wasm" }
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
gloo = { version = "0.9", features = ["futures", "utils"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlFormElement",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Element",
    "Node",
    "EventTarget",
    "Location",
    "Url",
    "Navigator",
    "MouseEvent",
    "Document",
    "KeyboardEvent",
    "CssStyleDeclaration",
    "MutationObserver",
    "MutationObserverInit",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
    "Storage",
] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
rooting = { version = "0.1", features = ["futures"] }
flowcontrol = "0.2"
lunk = { version = "0.3" }
http = "1"
glove = { version = "0.4" }
reqwest = "0.12"

[lints.clippy]
all = "allow"
