[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
shared = { path = "../shared" }
aargvark = { version = "0.6", features = ["serde_json"] }
flowcontrol = "0.2"
good-ormning-runtime = { version = "0.3", features = ["sqlite"] }
http = "1"
http-body-util = "0.1"
htwrap = "0.10"
hyper = "1"
hyper-tungstenite = "0.15"
hyper-util = "0.1"
loga = "0.5"
rusqlite = { version = "0.32", features = ["array", "bundled"] }
sea-query = { version = "0.32.1", default-features = false, features = [
    "backend-sqlite",
] }
sea-query-rusqlite = { version = "0.7", features = ["with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
tokio-stream = "0.1"
taskmanager = "0.6"
deadpool-sqlite = "0.9"
futures = "0.3"
http-body = "1"
http-serde = "2"
sha2 = "0.10"
tempfile = "3"
tokio-util = "0.7"
urlencoding = "2"
hex = "0.4"
rust-embed = { version = "8.5.0", features = [
    "mime-guess",
    "interpolate-folder-path",
] }
async-walkdir = "2"
openidconnect = { version = "3", default-features = false }
moka = { version = "0.12", features = ["future"] }
cookie = { version = "0.18" }
serde_urlencoded = "0.7"
platform-info = "2"
rand = "0.8"
oauth2 = { version = "4", default-features = false }
fdap = { version = "0.1" }
mime_guess = "2"
rustemo = "0.7"
schemars = "0.8"
# A dep just to disable rustemo logs
log = { version = "*", features = ["release_max_level_off"] }
taglib = "1"
zip = "0.6"
walkdir = "2"
symphonia = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
mkvparser = "0.2"
mkvdump = "0.6"


[build-dependencies]
good-ormning = { version = "0.3", features = ["sqlite", "chrono"] }
rustemo-compiler = "0.7"

[dev-dependencies]
pretty_assertions = "1"
