[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
sha2 = "0.10"
hex = "0.4"
rustemo = { version = "0.7" }
ts-rs = { version = "11", features = ["serde-json-impl"] }

[build-dependencies]
rustemo-compiler = "0.7"
