[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
ezing = "0.2"
gloo = { version = "0.9", features = ["futures"] }
js-sys = "0.3"
reqwasm = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "ClipboardItem",
    "ConnectionType",
    "CssStyleDeclaration",
    "Document",
    "DomException",
    "DomParser",
    "DomRect",
    "History",
    "HtmlAudioElement",
    "HtmlDocument",
    "HtmlHeadingElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "HtmlSelectElement",
    "HtmlVideoElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetDirectoryOptions",
    "KeyboardEvent",
    "Location",
    "LockManager",
    "MediaMetadata",
    "MediaQueryList",
    "MediaSession",
    "MediaSessionAction",
    "MessageEvent",
    "MouseEvent",
    "MediaError",
    "Navigator",
    "NetworkInformation",
    "NodeList",
    "StorageManager",
    "SupportedType",
    "Url",
    "WheelEvent",
] }
futures = "0.3"
tokio = { version = "1", features = ["macros", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"
defer = "0.1"
shared = { path = "../shared" }
sha2 = "0.10"
lunk = { version = "0.3" }
rooting = { version = "0.1", features = ["futures"] }
urlencoding = "2"
qrcode = { version = "0.13", default-features = false, features = ["svg"] }
uuid = { version = "1", features = ["v4", "js"] }
serde_urlencoded = "0.7"
async-trait = "0.1"
flowcontrol = "0.2"
structre = "0.2"
by_address = "1"
mime2ext = "0.1.54"

[build-dependencies]
convert_case = "0.8.0"
genemichaels-lib = "0.7.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"

[profile.release]
# Voodoo https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1

[lints.clippy]
all = "allow"
